fix baseURL in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://buddysco.com/"
+baseURL = "https://buddyupeng.github.io/buddysco.com/"
 languageCode = "en-us"
 paginate = 6
 theme = "portio"
