--- a/config.toml
+++ b/config.toml
@@ -13,27 +13,7 @@ name = "About"
 url = "#about"
 weight = 2
 [[menu.main]]
-name = "Service"
-url = "#service"
-weight = 3
-[[menu.main]]
-name = "Work"
-url = "#portfolio"
-weight = 4
-[[menu.main]]
-name = "Resume"
-url = "#resume"
-weight = 5
-[[menu.main]]
-name = "Skills"
-url = "#skills"
-weight = 6
-[[menu.main]]
-name = "Blog"
-url = "#blog"
-weight = 7
-[[menu.main]]
-name = "Contact"
+name = "Downloads"
 url = "#contact"
 weight = 8
 
