--- a/data/hero.yml
+++ b/data/hero.yml
@@ -8,5 +8,5 @@ content: >
 buttonName: Join Buddies
 buttonURL: "#contact"
 image: images/cover/right.jpg
-videoThumb: images/site-navigation/buddysco-logo.webp
+videoThumb: images/hero/buddy-video-thumbnail.png
 videoURL: https://www.youtube.com/watch?v=53HGoMuUxTQ
