--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://buddysco.com/"
 languageCode = "en-us"
 paginate = 6
 theme = "portio"
-title = "BuddysCo"
+title = "BuddysCo - We help you search for study group. Find peers suited for you!"
 # Main Menu
 [[menu.main]]
 name = "Home"
@@ -17,9 +17,13 @@ name = "Download App"
 url = "#contact"
 weight = 3
 [[menu.main]]
+name = "Blog"
+url = "#blog"
+weight = 4
+[[menu.main]]
 name = "Contact Us"
 url = "contact"
-weight = 4
+weight = 5
 
 
 [params]
