--- a/data/hero.yml
+++ b/data/hero.yml
@@ -9,4 +9,4 @@ buttonName: Join Buddies
 buttonURL: "#contact"
 image: images/cover/right.jpg
 videoThumb: images/hero/buddy-video-thumbnail.png
-videoURL: https://www.youtube.com/watch?v=9QbsGW7ei8Y
+videoURL: https://www.youtube.com/watch?v=BWEf0PDgmu4
